<resources>
    <string name="app_name">TaskPerf1</string>
    <string name="community">COMMUNITY</string>
    <string name="no_information_given">Created by Matthew Luis N. Villar. BSIT 3-207</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="level_37">Level 37</string>
    <string name="aristocrat">Aristocrat</string>
    <string name="_100_xp">100 XP</string>
    <string name="currently_offline">Currently Offline</string>
    <string name="last_online">Last Online 36 hrs, 54 mins ago</string>
    <string name="badges">Badges</string>
    <string name="_39">39</string>
    <string name="groups">Groups</string>
    <string name="games">Games</string>
    <string name="_182">182</string>
    <string name="inventory">Inventory</string>
    <string name="friends">Friends</string>
    <string name="_210">210</string>
    <string name="cheeseball">Cheeseball™</string>
    <string name="_5">5</string>
    <string name="screenshots">Screenshots</string>
    <string name="_30">30</string>
    <string name="videos">Videos</string>
    <string name="_1">1</string>
    <string name="tag">Tag</string>
    <string name="news">News</string>
    <string name="auth">Authenticator</string>
    <string name="notifications">Notifications</string>
    <string name="more">More</string>
</resources>