<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/tag"
        android:title="@string/tag"
        android:icon="@drawable/tag_solid_full"
        />
    <item
        android:id="@+id/news"
        android:title="@string/news"
        android:icon="@drawable/newspaper_solid_full"
        />
    <item
        android:id="@+id/auth"
        android:title="@string/auth"
        android:icon="@drawable/shield_solid_full"
        />
    <item
        android:id="notifications"
        android:title="@string/notifications"
        android:icon="@drawable/bell_solid_full"
        />
    <item
        android:id="@+id/bars"
        android:title="@string/more"
        android:icon="@drawable/bars_solid_full"
        />
</menu>